Leaderboard screen and achievements screen buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,23 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/score_view" />
 
+    <Button
+        android:text="Achievements"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/achievements_button"
+        android:onClick="showAchievements"
+        />
+
+    <Button
+        android:text="Leaderboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/leaderboard_button"
+        android:onClick="showLeaderboard"/>
+
 </RelativeLayout>
