Not attempting google play services anymore

--- a/app/src/main/res/values/games-ids.xml
+++ b/app/src/main/res/values/games-ids.xml
@@ -5,11 +5,11 @@ Save this file as res/values/games-ids.xml in your project.
 -->
 <resources>
     <!-- app_id -->
-    <string name="app_id" translatable="false">112514593513</string>
+    <string name="app_id">112514593513</string>
     <!-- package_name -->
-    <string name="package_name" translatable="false">com.example.myapplication.newgame</string>
+    <string name="package_name">com.example.myapplication.newgame</string>
     <!-- achievement Lightning Fast -->
-    <string name="achievement_lightning_fast" translatable="false">CgkI6eWRk6MDEAIQAg</string>
+    <string name="achievement_lightning_fast">CgkI6eWRk6MDEAIQAg</string>
     <!-- leaderboard CS441 -->
-    <string name="leaderboard_cs441" translatable="false">CgkI6eWRk6MDEAIQAQ</string>
+    <string name="leaderboard_cs441">CgkI6eWRk6MDEAIQAQ</string>
 </resources>
